--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
     "dotenv": "^17.2.0",
+    "ee-first": "^1.1.1",
     "express": "^4.18.2",
     "recharts": "^2.8.0",
     "zod": "^3.23.8"
